deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegis-api
  labels:
    app.kubernetes.io/name: aegis
    app.kubernetes.io/part-of: heliantheon
spec:
  ingressClassName: traefik
  rules:
    - host: aegis.heliannuuthus.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aegis
                port:
                  name: http
